[project]
name = 'alien_invasion'
version = '0.1.0'
description = 'A 2D arcade shooter game built with Pygame'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
    'pygame==2.5.2',
]

[project.optional-dependencies]
dev = [
    'ruff==0.15.20',
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py312"
fix = true

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]

select = ["E", "F", "I", "UP"]
ignore = []